2011-04-08  Jian Li  <jianli@chromium.org>

        Unreviewed, rolling out r83327, r83330 since these patches are very
        likely to break chromium webkit mac10.6 builders.

        * Scripts/webkitpy/layout_tests/layout_package/json_layout_results_generator.py:
        * Scripts/webkitpy/layout_tests/layout_package/single_test_runner.py:
        * Scripts/webkitpy/layout_tests/layout_package/test_expectations.py:
        * Scripts/webkitpy/layout_tests/layout_package/test_failures.py:
        * Scripts/webkitpy/layout_tests/layout_package/test_result_writer.py:
        * Scripts/webkitpy/layout_tests/port/base.py:
        * Scripts/webkitpy/layout_tests/port/chromium.py:
        * Scripts/webkitpy/layout_tests/port/dryrun.py:
        * Scripts/webkitpy/layout_tests/port/mock_drt.py:
        * Scripts/webkitpy/layout_tests/port/mock_drt_unittest.py:
        * Scripts/webkitpy/layout_tests/port/test.py:
        * Scripts/webkitpy/layout_tests/port/webkit.py:

2011-04-08  Vincent Scheib  <scheib@chromium.org>

        Reviewed by Eric Seidel.

        add chromium-gpu-linux-x86_64 to the recognized list of ports
        https://bugs.webkit.org/show_bug.cgi?id=58099

        Add chromium-gpu-linux-x86_64 to fix assert.

        * Scripts/webkitpy/layout_tests/port/chromium_linux.py:

2011-04-08  Alpha Lam  <hclam@chromium.org>

        Unreviewed, rolling out r83335.
        http://trac.webkit.org/changeset/83335
        https://bugs.webkit.org/show_bug.cgi?id=53556

        GTK and QT bots are broken

        * Scripts/build-webkit:

2011-04-07  Anna Cavender  <annacc@chromium.org>

        Reviewed by Eric Carlson.

        Setup ENABLE(TRACK) feature define
        https://bugs.webkit.org/show_bug.cgi?id=53556

        * Scripts/build-webkit:

2011-04-08  Dirk Pranke  <dpranke@chromium.org>

        Reviewed by Adam Roben.

        new-run-webkit-tests: configure a NRWT test bot for Mac SL
        https://bugs.webkit.org/show_bug.cgi?id=58114
